[package]
name = "sparrow"
version = "0.1.0"
authors = ["yujinliang <285779289@qq.com>"]
edition = "2018"
#---
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0.102", features = ["derive"] }
bitflags = "1.2.1"
byteorder = "1.3.2"
tokio = { version = "0.2.8", features = ["full"] }
failure = "0.1.6"


[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

